deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homelab-docs
  namespace: homelab-docs
  labels:
    "app.kubernetes.io/name": "homelab-docs"
spec:
  selector:
    "app.kubernetes.io/name": "homelab-docs"
  ports:
    - name: http
      port: 8080
      targetPort: 8080
