deploy/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homelab-docs
  namespace: homelab-docs
  labels:
    app.kubernetes.io/name: homelab-docs
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: homelab-gateway
      namespace: nginx-gateway
      sectionName: http
  hostnames:
    - docs.dbhomelab.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: homelab-docs
          port: 8080
          weight: 1
