deploy/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homelab-docs
  namespace: homelab-docs
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "1024m"
spec:
  ingressClassName: nginx
  rules:
    - host: docs.dbhomelab.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homelab-docs
                port:
                  number: 8080
